<resources>
    <string name="app_name">RISK - probability calculator</string>

    <string name="help_overall1">Welcome to the Guide for the app \"RISK - probability
        calculator\"</string>
    <string name="help_overall2">For RISK-rules, please have a look at the rulebook, delivered with
        the game. </string>
    <string name="help_overall3">Important for the usage of the app is the knowledge of how a war -
        the principle concept of this game - works. Within a war, one player is attacking the field
        of another player. The RISK rules state that the attacker can attack with at most three
        dices whereby the defender can defend his field with at most two dices. A so-called dice-war
        ends after each time the dices were thrown by both the attacker and the defender. Each time
        when dices were thrown, the probabilities of the attacker or defender winning are updated.
    </string>

    <string name="help_field1">Enter the attacking and the defending units for units located on the
        fields which are going to be attacked.</string>
    <string name="help_field2">At the beginning, the attacking units and the defending units for at
        least one field must be entered. If the units exceed 75, they will be automatically reset to
        75 - entering numbers bigger than 75 is not possible.</string>
    <string name="help_field3">After all units are entered, please press \"Calculate\"</string>

    <string name="help_calculation1">For each defending field entered within the step before, a line
        with the following values is displayed: </string>
    <string name="help_calculation2">Number of attacker, number of defender, number of expected
        remaining attackers, number of expected remaining defenders, probability that attacker
        wins, probability that defender wins</string>
    <string name="help_calculation3">Note: If the winning probabilities are distributed as of 100%
        and 0%, the 0% does not implicate no chance of winning but the probability is too little and
        therefore is rounded to 0%.</string>
    <string name="help_calculation4">By pressing a line, the attacker chooses which units are going
        to be attacked and a new window will be opened.</string>

    <string name="help_playAndPress1">On top are the same values as before in the list, but now
        only for the chosen field.</string>
    <string name="help_playAndPress2">Depending on current attacker and defender are multiple
        buttons shown.</string>
    <string name="help_playAndPress3">The two buttons on the left side, are pressed if the attacker
        lost one or two units.</string>
    <string name="help_playAndPress4">The two buttons on the right side are pressed if the defender
        lost one or two units.</string>
    <string name="help_playAndPress5">The button in the middle is pressed if both sides lost one
        unit.</string>
    <string name="help_playAndPress6">After each button-press, the values above will be updated.
        Press a button each time, a dice-war has ended</string>


    <string name="input_field_1">Enter at least for field 1 numbers of attacking and defending Units</string>

    <string name="calculate_button">Calculate</string>
    <string name="input_field_defending_units_on_field_1">Defending Units on Field 1:</string>
    <string name="input_field_attacking_units_on_field">Attacking Units on Field  :</string>
    <string name="input_field_defending_units_on_field_2">Defending Units on Field 2:</string>
    <string name="input_field_defending_units_on_field_3">Defending Units on Field 3:</string>
    <string name="input_field_defending_units_on_field_4">Defending Units on Field 4:</string>
    <string name="input_field_defending_units_on_field_5">Defending Units on Field 5:</string>
    <string name="input_field_defending_units_on_field_6">Defending Units on Field 6:</string>
    <string name="attacker"># A</string>
    <string name="attacker_long">Number of attackers</string>
    <string name="defender"># D</string>
    <string name="defender_long">Number of defenders</string>
    <string name="remaining_attacker">surv. A</string>
    <string name="remaining_attacker_long">surviving attacker</string>
    <string name="remaining_defender">surv. D</string>
    <string name="remaining_defender_long">surviving defender</string>
    <string name="attacker_win_with">Win A</string>
    <string name="attacker_win_with_long">Win attacker</string>
    <string name="both_minus_1">A-1 D-1</string>
    <string name="defender_win_with">Win D</string>
    <string name="defender_win_with_long">Win defender</string>
    <string name="attacker_side_min_2">A-2</string>
    <string name="attacker_side_min_1">A-1</string>
    <string name="defender_side_min_2">D-2</string>
    <string name="defender_side_min_1">D-1</string>
    <string name="todo">TODO</string>
    <string name="chose_field_of_interest">Chose field of interest</string>

    <string name="main_continue">Continue</string>
    <string name="main_help">Help</string>


    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="alertNoDefender">Please enter at least units for one defender-field</string>
    <string name="alertNoAttacker">Please enter units for attacker-field</string>
    <string name="alertOver75">Input is required to be smaller than 76 - input will be set to 75 automatically</string>

</resources>