<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@drawable/welcome_background720x1280"
    android:baselineAligned="false">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:layout_gravity="center"
        android:gravity="center_horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/return_button"
            android:id="@+id/return_from_help_to_main_button">

        </ImageButton>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="0.1">

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="0.8">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fadingEdge="horizontal"

                    android:background="@drawable/paper_background"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_overall1"
                        android:textStyle="bold"
                        android:fontFamily="@font/quick_hand">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quick_hand"
                        android:text="@string/help_overall2">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quick_hand"
                        android:text="@string/help_overall3">
                    </TextView>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="5dp">
                    </View>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quick_hand"
                        android:text="@string/help_field1">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quick_hand"
                        android:text="@string/help_field2">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quick_hand"
                        android:text="@string/help_field3">
                    </TextView>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="5dp">
                    </View>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quick_hand"
                        android:text="@string/help_calculation1">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quick_hand"
                        android:text="@string/help_calculation2">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quick_hand"
                        android:text="@string/help_calculation3">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quick_hand"
                        android:text="@string/help_calculation4">
                    </TextView>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="5dp">
                    </View>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quick_hand"
                        android:text="@string/help_playAndPress1">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quick_hand"
                        android:text="@string/help_playAndPress2">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quick_hand"
                        android:text="@string/help_playAndPress3">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quick_hand"
                        android:text="@string/help_playAndPress4">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:fontFamily="@font/quick_hand"
                        android:layout_height="wrap_content"
                        android:text="@string/help_playAndPress5">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quick_hand"
                        android:text="@string/help_playAndPress6">
                    </TextView>


                </LinearLayout>


            </ScrollView>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="0.1">

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="0.1">

    </RelativeLayout>


</LinearLayout>


