<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@drawable/welcome_background720x1280"
    android:baselineAligned="false">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.15"
        android:layout_gravity="center_horizontal">

        <ImageButton
            android:id="@+id/return_from_input_field_to_main_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/return_button"
            tools:ignore="SpeakableTextPresentCheck">

        </ImageButton>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="0.2">

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="0.6">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/paper_background"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:fontFamily="@font/quick_hand"
                        android:text="@string/input_field_1">

                    </TextView>


                    <!--Input for first Field-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/infoForAttackerText1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/quick_hand"
                            android:text="@string/input_field_attacking_units_on_field" />

                        <EditText
                            android:id="@+id/attacker_text_view1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:minWidth="48dp"
                            android:minHeight="48dp"
                            android:fontFamily="@font/quick_hand"
                            tools:ignore="SpeakableTextPresentCheck"
                            android:importantForAutofill="no" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/infoForDefenderText1"
                            android:layout_width="wrap_content"
                            android:fontFamily="@font/quick_hand"
                            android:layout_height="wrap_content"
                            android:text="@string/input_field_defending_units_on_field_1" />

                        <EditText
                            android:id="@+id/defender_text_view_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:minWidth="48dp"
                            android:minHeight="48dp"
                            android:fontFamily="@font/quick_hand"
                            tools:ignore="SpeakableTextPresentCheck"
                            android:importantForAutofill="no" />
                    </LinearLayout>

                    <!--Input for second Field-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/infoForDefenderText2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/quick_hand"
                            android:text="@string/input_field_defending_units_on_field_2" />

                        <EditText
                            android:id="@+id/defender_text_view_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:minWidth="48dp"
                            android:fontFamily="@font/quick_hand"
                            android:minHeight="48dp"
                            tools:ignore="SpeakableTextPresentCheck"
                            android:importantForAutofill="no" />

                    </LinearLayout>


                    <!--Input for third field-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/infoForDefenderText3"
                            android:layout_width="wrap_content"
                            android:fontFamily="@font/quick_hand"
                            android:layout_height="wrap_content"
                            android:text="@string/input_field_defending_units_on_field_3" />

                        <EditText
                            android:id="@+id/defender_text_view_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:fontFamily="@font/quick_hand"
                            android:minWidth="48dp"
                            android:minHeight="48dp"
                            tools:ignore="SpeakableTextPresentCheck"
                            android:importantForAutofill="no" />

                    </LinearLayout>


                    <!--Input for fourth field-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/infoForDefenderText4"
                            android:layout_width="wrap_content"
                            android:fontFamily="@font/quick_hand"
                            android:layout_height="wrap_content"
                            android:text="@string/input_field_defending_units_on_field_4" />

                        <EditText
                            android:id="@+id/defender_text_view_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:minWidth="48dp"
                            android:fontFamily="@font/quick_hand"
                            android:minHeight="48dp"
                            tools:ignore="SpeakableTextPresentCheck"
                            android:importantForAutofill="no" />

                    </LinearLayout>

                    <!--Input for fifth field-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/infoForDefenderText5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/quick_hand"
                            android:text="@string/input_field_defending_units_on_field_5" />

                        <EditText
                            android:id="@+id/defender_text_view_5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:minWidth="48dp"
                            android:fontFamily="@font/quick_hand"
                            android:minHeight="48dp"
                            tools:ignore="SpeakableTextPresentCheck"
                            android:importantForAutofill="no" />

                    </LinearLayout>

                    <!--Input for sixth field-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/infoForDefenderText6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/quick_hand"
                            android:text="@string/input_field_defending_units_on_field_6" />

                        <EditText
                            android:id="@+id/defender_text_view_6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:minWidth="48dp"
                            android:minHeight="48dp"
                            android:fontFamily="@font/quick_hand"
                            tools:ignore="SpeakableTextPresentCheck"
                            android:importantForAutofill="no" />

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="0.2"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/calculate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quick_hand"
                    android:text="@string/calculate_button" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="0.15">

    </RelativeLayout>


</LinearLayout>


